results/SpecGenBench/4-shot/log-CheckABeforeB-2023_11_04_20_12_46.txt
class CheckABeforeB {
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
    public boolean checkString(String s) {
        char[] chars = s.toCharArray();
        int i = 0;
        //@ maintaining (\forall int k; 0 <= k && k < i; chars[k] == 'a');
        //@ maintaining 0 <= i && i <= chars.length;
        //@ decreases chars.length - i;
        while (i < chars.length && chars[i] == 'a') {
            i++;
        }
        int j = i;
        //@ maintaining (\forall int k; i <= k && k < j; chars[k] == 'b');
        //@ maintaining i <= j && j <= chars.length;
        //@ decreases chars.length - j;
        while (j < chars.length && chars[j] == 'b') {
            j++;
        }
        return j == chars.length;
    }
}
/home/max/Documents/JMLGPT/tmp/CheckABeforeB.java:2: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
                                                           ^
  symbol:   variable chars
  location: class CheckABeforeB
/home/max/Documents/JMLGPT/tmp/CheckABeforeB.java:2: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
                                                                         ^
  symbol:   variable chars
  location: class CheckABeforeB
/home/max/Documents/JMLGPT/tmp/CheckABeforeB.java:2: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
                                                                                                             ^
  symbol:   variable i
  location: class CheckABeforeB
/home/max/Documents/JMLGPT/tmp/CheckABeforeB.java:2: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
                                                                                                                           ^
  symbol:   variable chars
  location: class CheckABeforeB
/home/max/Documents/JMLGPT/tmp/CheckABeforeB.java:2: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < chars.length; chars[i] == 'a') && (\forall int j; i <= j && j < chars.length; chars[j] == 'b');
                                                                                                                                         ^
  symbol:   variable chars
  location: class CheckABeforeB
5 errors

